--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.4.0",
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
-    "@supabase/supabase-js": "^2.57.2",
-    "expo": "~53.0.22",
-    "expo-font": "^13.3.2",
-    "expo-image-picker": "^16.1.4",
-    "expo-navigation-bar": "~4.2.8",
-    "expo-splash-screen": "^0.30.10",
-    "expo-status-bar": "~2.2.3",
+    "expo": "^54.0.7",
+    "expo-constants": "~18.0.9",
+    "expo-device": "~8.0.8",
+    "expo-font": "~14.0.8",
+    "expo-image-picker": "~17.0.8",
+    "expo-navigation-bar": "~5.0.8",
+    "expo-notifications": "~0.32.11",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
     "firebase": "^12.2.1",
-    "idb": "^8.0.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-image-picker": "^8.2.1",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "firebase-admin": "^13.5.0",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
