--- a/eas.json
+++ b/eas.json
@@ -5,14 +5,17 @@
   },
   "build": {
     "development": {
-      "developmentClient": true,
       "distribution": "internal"
     },
     "preview": {
       "distribution": "internal"
     },
     "production": {
-      "autoIncrement": true
+      "distribution": "store",
+      "autoIncrement": true,
+      "android": {
+        "buildType": "apk"
+      }
     },
     "simple": {
       "android": {
