--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/stack": "^7.4.7",
-    "expo": "^54.0.7",
+    "@sendinblue/client": "^3.3.1",
+    "expo": "54.0.13",
     "expo-constants": "~18.0.9",
     "expo-device": "~8.0.8",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
+    "expo-mail-composer": "~15.0.7",
     "expo-navigation-bar": "~5.0.8",
     "expo-notifications": "~0.32.11",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "firebase": "^12.2.1",
+    "expo-updates": "~29.0.12",
+    "firebase": "^9.23.0",
     "firebase-admin": "^13.5.0",
+    "phil-reg-prov-mun-brgy": "^1.1.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
