--- a/package.json
+++ b/package.json
@@ -28,14 +28,21 @@
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
+    "expo-av": "~15.0.1",
+    "expo-camera": "~16.0.3",
+    "expo-media-library": "~17.0.3",
+    "react-native-video": "^6.4.5",
+    "react-native-webrtc": "^1.119.0",
     "firebase": "^9.23.0",
     "firebase-admin": "^13.5.0",
     "phil-reg-prov-mun-brgy": "^1.1.0",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
