--- a/app.json
+++ b/app.json
@@ -66,7 +66,8 @@
           "color": "#83AFA7",
           "defaultChannel": "default"
         }
-      ]
+      ],
+      "expo-web-browser"
     ],
     "runtimeVersion": {
       "policy": "appVersion"
