--- a/package.json
+++ b/package.json
@@ -18,20 +18,21 @@
     "@react-navigation/stack": "^7.4.7",
     "@sendinblue/client": "^3.3.1",
     "expo": "54.0.13",
-    "expo-av": "~15.0.1",
-    "expo-camera": "~16.0.3",
+    "expo-av": "~16.0.7",
+    "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.9",
     "expo-device": "~8.0.8",
     "expo-font": "~14.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-location": "~19.0.7",
     "expo-mail-composer": "~15.0.7",
-    "expo-media-library": "~17.0.3",
+    "expo-media-library": "~18.2.0",
     "expo-navigation-bar": "~5.0.8",
     "expo-notifications": "~0.32.11",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
     "firebase": "^9.23.0",
     "firebase-admin": "^13.5.0",
     "phil-reg-prov-mun-brgy": "^1.1.0",
@@ -42,7 +43,9 @@
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "react-native-webrtc": "^124.0.7",
+    "react-native-webview": "^13.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
